gitops/vaultwarden/vaultwarden-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - name: vaultwarden
        image: ghcr.io/dani-garcia/vaultwarden:1.37.3
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          privileged: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: vaultwarden-data
          mountPath: /data

      # Litestream
      - name: litestream
        image: litestream/litestream:0.5.17
        args:
        - 'replicate'
        volumeMounts:
        - name: vaultwarden-data
          mountPath: /data
        - name: litestream-config
          mountPath: /etc/litestream.yml
          subPath: litestream.yml
        ports:
        - name: metrics
          containerPort: 9090
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          privileged: false
          readOnlyRootFilesystem: true
      volumes:
      - name: vaultwarden-data
        persistentVolumeClaim:
          claimName: vaultwarden-pvc
      - name: litestream-config
        configMap:
          name: litestream-config

---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: default
spec:
  selector:
    app: vaultwarden
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare-dns
spec:
  tls:
  - hosts:
    - vault.buc.sh
    secretName: cert-vault-buc-sh
  rules:
    - host: vault.buc.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
